syntax = "proto3";

package pchat.common;

option go_package = "pchat/pb/common";

message StringValue {
  string value = 1;
}
